# knowledge_chatbot_using_crewai

./: README.md  pyproject.toml
src/knowledge_chatbot_using_crewai/: crew.py  main.py
src/knowledge_chatbot_using_crewai/config/: tasks.yaml
